package src;

public interface AppView {
    void showLogin();
    void showCustomer();
    void showAdmin();
    void showAgent();
    
} 
